// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MailingListItem /> should renders correctly 1`] = `
<MailingListItemstyle__Container
  rowId="1"
  selected={false}
>
  <MailingListItemstyle__ButtonMembers
    onClick={[Function]}
    type="button"
  >
    Je suis une mailing list
  </MailingListItemstyle__ButtonMembers>
  <p
    className="project-title"
  >
    Je suis un titre de projet
  </p>
  <MailingListItemstyle__InfoMembers>
    <Icon
      color="#6c757d"
      name="new-user"
      size={13}
    />
    <p>
      2
       
      <FormattedMessage
        id="global.members"
        values={
          Object {
            "num": 2,
          }
        }
      />
    </p>
  </MailingListItemstyle__InfoMembers>
</MailingListItemstyle__Container>
`;

exports[`<MailingListItem /> should renders correctly when selected 1`] = `
<MailingListItemstyle__Container
  rowId="1"
  selected={true}
>
  <MailingListItemstyle__ButtonMembers
    onClick={[Function]}
    type="button"
  >
    Je suis une mailing list
  </MailingListItemstyle__ButtonMembers>
  <p
    className="project-title"
  >
    Je suis un titre de projet
  </p>
  <MailingListItemstyle__InfoMembers>
    <Icon
      color="#6c757d"
      name="new-user"
      size={13}
    />
    <p>
      2
       
      <FormattedMessage
        id="global.members"
        values={
          Object {
            "num": 2,
          }
        }
      />
    </p>
  </MailingListItemstyle__InfoMembers>
</MailingListItemstyle__Container>
`;
